@@ -302,6 +302,7 @@ def load_module_graph(graph, pool, update=None, lang=None):
 
         # Ensure cache is clear for other instances
         Cache.clear_all()
+        Cache.refresh_pool(transaction)
     logger.info('all modules loaded')
 
 
