@@ -1,3 +1,4 @@
+* Refresh pool of other processes
 * Add clear_all method to Cache
 * Support Genshi element directives in HTML editor
 * Add firstline tool
